--- a/index.html
+++ b/index.html
@@ -1,61 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://kit.fontawesome.com/edec7f25e3.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
-  <title>Stop Watch</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/edec7f25e3.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/lottie-web@5.7.4/build/player/lottie.min.js"></script>
 
-  <div class="container">
-  <div class="clock">
-    
+    <title>Counter</title>
+  </head>
+  <body>
+    <div class="container col-lg-4 bg-primary mt-5 rounded text-center py-3">
+      <!--Heading-->
+      <h1 class="text-white">Stopwatch</h1>
 
-    <div>
-      <h1><span id="hours">0</span><span id="minutes">0</span><span id="seconds">0</span></h1>
-    </div>
-   
-    <div class="milliseconds-container">
-      <span id="milliseconds">00</span>
-    </div>
-    <span class="spinner">
-      <span class="spinner2"></span>
-    </span>
-    
-  </div>
+      <!--display-->
+      <div
+        class="container rounded-circle bg-white d-flex justify-content-center align-items-center mt-5"
+        style="width: 200px; height: 200px"
+      >
+        <!--spinner-->
+        <div
+          class="d-none"
+          id="spinner-container"
+          style="width: 250px; height: 250px; position: absolute"
+        ></div>
 
-  
-
-  <div class="table">
-    <div class="head">
-      <div>Count</div>
-      <div>Time</div>
-    </div>
-
-    <div class="body">
-      <div>
-        <ul class="count">
-
-        </ul>
+        <!--counter values-->
+        <span class="display-4 d-none" id="hours"></span>
+        <span class="display-4 d-none" id="mins"></span>
+        <span class="display-4" id="secs"></span>
+        <span id="ms"></span>
       </div>
-      <div><ul class="time">
-  
-      </ul></div>
-    </div>
-  </div>
-  
-  <div class="btns">
-    <i class="fas fa-undo-alt fa-lg" id="reset"></i></i>
-   <i class="fas fa-play fa-lg" id="start"></i>
-   <i class="fas fa-stopwatch fa-lg" id="edit"></i>
-  </div>
-  
-  </div>
-  
 
-  <script src="app.js"></script>
-</body>
+      <!--buttons-->
+      <div class="buttons my-5">
+        <button class="btn btn-light" id="reset-btn">
+          <i class="fas fa-undo fa-lg"></i>
+        </button>
+        <button class="btn btn-light" id="startPause-btn">
+          <i class="fas fa-play fa-lg"></i>
+        </button>
+        <button class="btn btn-light" id="timeStamp-btn">
+          <i class="fas fa-stopwatch fa-lg"></i>
+        </button>
+      </div>
+
+      <!--table-->
+      <table class="table table-dark mx-auto d-none" id="table">
+        <thead>
+          <tr>
+            <th scope="col">Count</th>
+            <th scope="col">Time stamp</th>
+          </tr>
+        </thead>
+        <tbody id="table-body"></tbody>
+      </table>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+      crossorigin="anonymous"
+    ></script>
+    <script src="index.js"></script>
+  </body>
 </html>
